--- a/JavaScript-vs-React/BaseDoReact/react-basis/src/index.css
+++ b/JavaScript-vs-React/BaseDoReact/react-basis/src/index.css
@@ -53,9 +53,9 @@ main h2 {
   color: #a18aba;
 }
 
-#core-concepts {
+.core-concepts {
   display: flex;
-  width: fit-content;
+  flex-direction: column;
   width: fit-content;
   margin: 10px auto;
   padding: 2rem;
@@ -64,7 +64,13 @@ main h2 {
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.4);
 }
 
-#core-concepts ul {
+.core-concepts .concepts{
+  display: flex;
+  flex-direction: row;
+  margin: 3rem auto;
+}
+
+.core-concepts ul {
   list-style: none;
   padding: 0;
   margin: 0;
@@ -74,34 +80,34 @@ main h2 {
   justify-content:flex-start;
 }
 
-#core-concepts li {
+.core-concepts li {
   /* width: 10rem; */
   text-align: center;
 }
 
-#core-concepts li img {
+.core-concepts li img {
   height: 4rem;
   width: 6rem;
   object-fit: cover;
 }
 
-#core-concepts li h3 {
+.core-concepts li h3 {
   margin: 0.5rem 0;
 }
 
-#core-concepts li p {
+.core-concepts li p {
   font-size: 0.9rem;
 }
 
-#examples {
+.examples {
   margin: 3rem auto;
 }
 
-#examples h2 {
+.examples h2 {
   text-align: left;
 }
 
-#examples menu {
+.examples menu {
   margin: 1rem 0;
   padding: 0;
   display: flex;
@@ -109,7 +115,7 @@ main h2 {
   list-style: none;
 }
 
-#examples menu button {
+.examples menu button {
   padding: 0.5rem 1rem;
   border: none;
   border-radius: 6px;
@@ -121,17 +127,17 @@ main h2 {
   transition: all 0.2s ease-in-out;
 }
 
-#examples menu button:hover {
+.examples menu button:hover {
   background-color: #1b082f;
   color: #ebe7ef;
 }
 
-#examples menu button.active {
+.examples menu button.active {
   background-color: #7925d3;
   color: #ebe7ef;
 }
 
-#tab-content {
+.tab-content {
   padding: 1rem;
   border-radius: 6px;
   background-color: #2f1d43;
@@ -142,16 +148,16 @@ main h2 {
   
 }
 
-#tab-content h3 {
+.tab-content h3 {
   margin: 0;
 }
 
-#tab-content pre {
+.tab-content pre {
   word-wrap: break-word; 
   overflow-wrap:normal; 
   white-space: pre-wrap;
 }
 
-#tab-content code {
+.tab-content code {
   font-size: 1rem;
 }
